blue background fixed, video services on mobile desktop size, headers synced, various text sections synced, service icons single row

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,28 @@ a:visited {
   cursor: pointer;
 }
 
+/** Multi Use 
+   ---------------------------------------------------------*/
+
+.overlay_header,
+.services_header,
+.process-header,
+.about-header,
+.contact-header {
+    font-family: futura-pt-condensed, sans-serif;
+    font-size: 3.75rem;
+    text-transform: uppercase;
+}
+
+.overlay_text,
+.services_text,
+.process_text,
+.about_text {
+  font-size: 1rem;
+}
+
+
+
 /** Header
    ---------------------------------------------------------*/
 .section {
@@ -102,14 +124,9 @@ a:visited {
   width: auto;
 }
 
-.overlay_header {
-  font-family: futura-pt-condensed, sans-serif;
-  font-size: 3.75rem;
-  text-transform: uppercase;
-}
+
 
 .overlay_text {
-  font-size: 1rem;
   max-width: 30rem;
   margin-bottom: 1rem;
 }
@@ -153,18 +170,13 @@ a:visited {
 }
 
 .services_header {
-  font-size: 2.75rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
+  padding-top: 1rem;
 }
 
 .quote {
   max-width: 45rem;
   padding: 0 1rem;
-  margin-bottom: 2rem;
-  font-size: 1.2rem;
+  font-size: 1.0rem;
   text-transform: uppercase;
 }
 
@@ -174,7 +186,6 @@ a:visited {
 
 .services_text {
   max-width: 45rem;
-  font-size: 1.1rem;
   padding: 0 1rem;
 }
 
@@ -209,6 +220,7 @@ a:visited {
 
 .service_lead-container {
   background-color: rgb(51, 204, 204);
+  margin: 0;
 }
 
 .service_points-container {
@@ -243,15 +255,11 @@ a:visited {
 }
 
 .process-header {
-  font-family: futura-pt-condensed, sans-serif;
-  font-size: 3rem;
-  font-weight: 700;
   margin-top: 2rem;
 }
 
 .process_text {
   max-width: 56.25rem;
-  font-size: 1rem;
   margin: 2rem 0;
   padding: 0 1rem;
 }
@@ -333,12 +341,6 @@ a:visited {
   padding: 1rem;
 }
 
-.about-header {
-  font-family: futura-pt-condensed, sans-serif;
-  font-size: 3.75rem;
-  font-weight: 700;
-}
-
 .experience-col {
   display: flex;
   flex-direction: column;
@@ -361,13 +363,10 @@ a:visited {
 ---------------------------------------------------------*/
 #contactus {
   color: white;
-  /* max-height: 62.5rem; */
-  /* width: auto; */
+  padding-bottom: 2rem;
 }
 
-.contact-title {
-  font-family: futura-pt-condensed, sans-serif;
-  font-weight: 700;
+.contact-header {
   padding: 1rem 0;
 }
 
@@ -379,17 +378,11 @@ a:visited {
   text-align: center;
 }
 
-.custom-contact {
-  /* max-height: 20rem; */
-}
-
 .social {
   font-weight: 700;
 }
 
 .custom-social {
-  /* max-height: 20rem; */
-  /* width: auto; */
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -477,6 +470,12 @@ form {
 
   /** Services
   ---------------------------------------------------------*/
+
+  /** Processes
+  ---------------------------------------------------------*/
+  #servicesVid {
+    height: 65%; 
+  }
 }
 
 /* // Medium devices (tablets, 768px and up) */
